--- a/package.json
+++ b/package.json
@@ -13,6 +13,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "concurrently": "^8.2.0"
+    "@mui/material": "^5.14.2",
+    "axios": "^1.4.0",
+    "body-parser": "^1.20.2",
+    "concurrently": "^8.2.0",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.10.1",
+    "idb": "^7.1.1",
+    "jspdf": "^2.5.1",
+    "react-lazy-load-image-component": "^1.6.0"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
