--- a/frontend/package.json
+++ b/frontend/package.json
@@ -56,6 +56,7 @@
   },
   "devDependencies": {
     "node-polyfill-webpack-plugin": "^2.0.1",
-    "webpack-node-externals": "^3.0.0"
+    "webpack-node-externals": "^3.0.0",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
