--- a/netlify.toml
+++ b/netlify.toml
@@ -2,6 +2,12 @@
   command = "npm run build" 
   publish = './frontend/build' # Command to build the frontend
   functions = "./backend/netlify-functions"  # Directory where your serverless functions are located
+  timeout = 40
   include = [
     "backend/models/**/*"
   ]
+
+  [[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
